--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -33,6 +33,10 @@ p.info{
   font-size: 16px;
 }
 .error{ color: rgb(139, 76, 35); }
+.notice{
+  font-weight: bold;
+  color: rgb(118, 79, 20);
+}
 
 strike{
   -moz-text-decoration-color: red;
