--- a/views/photos.haml
+++ b/views/photos.haml
@@ -9,5 +9,8 @@
       %p= "Всего фотографий скачано: #{@count}"
       - unless @skipped.zero?
         %p= "Пропущено из-за ошибок соединения: <span class=error>#{@skipped}</span>"
+      %p
+        Пароль к архиву: 
+        %span.notice= @password
       %a{href: @file_url} СКАЧАТЬ АРХИВ
-
+      %p.info (не забудте скопировать пароль)
