rackup configuration added, logs now to log/app.log, not to stdout

--- a/views/photos.haml
+++ b/views/photos.haml
@@ -13,4 +13,4 @@
         Пароль к архиву: 
         %span.notice= @password
       %a{href: @file_url} СКАЧАТЬ АРХИВ
-      %p.info (не забудте скопировать пароль)
+      %p.info (не забудь скопировать пароль)
