improved error hanling

--- a/views/error.haml
+++ b/views/error.haml
@@ -6,6 +6,6 @@
     %title ОШИБАКА - Скачать фотки с собой
   %body
     %div
-      %p ВКонтакте сообщает об ошибке:
+      %p Что-то пошло не так:
       %p.error= @msg
       %a{href: "/"} ПОПРОБОВАТЬ ЕЩЁ РАЗ
