spinner added to main page

--- a/views/error.haml
+++ b/views/error.haml
@@ -5,7 +5,7 @@
     %link{rel: "stylesheet", type: "text/css", href: "/css/styles.css"}
     %title ОШИБАКА - Скачать фотки с собой
   %body
-    %div
+    %div.main
       %p Что-то пошло не так:
       %p.error= @msg
       %a{href: "/"} ПОПРОБОВАТЬ ЕЩЁ РАЗ
