--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,7 +4,7 @@
   font-family: sans;
 }
 
-div{
+div.main{
   margin:auto;
   width: 500px;
   background-color:rgb(237, 241, 245);
@@ -15,6 +15,25 @@ div{
   border-radius: 10px;
   color: rgb(96, 115, 135);
 }
+
+div#processing{
+  padding: 10px 10px 20px;
+  margin-top:20px;
+  width: 120px;
+  display: none;
+}
+  div#processing .info{
+    margin-top:0;
+  }
+  #spinner_container{
+    display: inline-block;
+  }
+  .spinner{
+    display: inline-block;
+    position: relative !important;
+    left:0 !important;
+    top:0 !important;
+  }
 
 a{
   display:block;
@@ -28,7 +47,7 @@ a{
 }
 
 p, a{ margin-top: 10px; }
-p.info{
+.info{
   color: rgb(130, 155, 175);
   font-size: 16px;
 }
