--- a/views/index.haml
+++ b/views/index.haml
@@ -5,8 +5,13 @@
     %link{rel: "stylesheet", type: "text/css", href: "/css/styles.css"}
     %title Скачать фотки с собой
   %body
-    %div
+    %div.main
       %h2 Скачай все фотки с тобой из&nbsp;VK
       %p.info (но не больше тысячи)
-      %a{href: '/auth'} НАЧАТЬ
+      %a#begin{href: '/auth'} НАЧАТЬ
       %p.info (после авторизации придётся <strike>не</strike><b>много</b> подождать)
+    %div.main#processing
+      %p.info Обработка...
+      %span#spinner_container
+    %script{src: '/js/spin.min.js'}
+    %script{src: '/js/vk_photos.js'}
